[backend]:  - восстановление пароля  - обновление open-api
