# src/main/java/com/gearit/api/controller/request/ResetPasswordRequest.java
@@ -1,0 +1,4 @@
+package com.gearit.api.controller.request;
+
+public record ResetPasswordRequest(String code, String password) {
+}
