# src/main/java/com/gearit/api/controller/request/VerifyCodeRequest.java
@@ -1,0 +1,4 @@
+package com.gearit.api.controller.request;
+
+public record VerifyCodeRequest(String code) {
+}
